@@ -1,3 +1,12 @@
+2011-03-26  Jakub Jelinek  <jakub@redhat.com>
+
+	Backport from mainline
+	2011-03-17  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/48141
+	* dse.c (record_store): If no positions are needed in an insn
+	that cannot be deleted, at least unchain it from active_local_stores.
+
 2011-03-25  Jakub Jelinek  <jakub@redhat.com>
 
 	* BASE-VER: Set to 4.6.1.
